--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: "Lato", sans-serif;
 }
@@ -14,6 +13,7 @@ body {
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
+  /* margin-bottom: -90px; */
 }
 
 .sidenav a {
@@ -70,7 +70,7 @@ body{
   
   ul li:before {
     content: '✓';
-    color:#6495ED;
+    color:green;
   }
 
   
@@ -83,4 +83,3 @@ body{
      color: white;
      text-align: center;
   }
-  
